--- a/hw1/styling.css
+++ b/hw1/styling.css
@@ -1,9 +1,9 @@
 body {
-  background-color: powderblue;
+  background-color: #313338;
 }
 h1 {
-  color: blue;
+  color: white;
 }
 p {
-  color: red;
+  color: white;
 }
