--- a/hw1/styling.css
+++ b/hw1/styling.css
@@ -1,7 +1,11 @@
 body {
   background-color: #313338;
 }
-h1 {
+h2 {
+  color: #313338;
+  background-color: white;
+}
+h3 {
   color: white;
 }
 p {
