--- a/hw1/styling.css
+++ b/hw1/styling.css
@@ -11,3 +11,13 @@ h3 {
 p {
   color: white;
 }
+
+.p2 {
+  font-family: Arial, Helvetica, sans-serif;
+}
+.p3 {
+  font-family: "Lucida Console", "Courier New", monospace;
+}
+ul {
+  color: white;
+}
