--- a/hw1/styling.css
+++ b/hw1/styling.css
@@ -33,3 +33,10 @@ p {
   flex-direction: column;
   align-items: center; /* Centers content horizontally */
 }
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 50%;
+  height: auto;
+}
