--- a/hw1/styling.css
+++ b/hw1/styling.css
@@ -15,18 +15,18 @@ h3 {
 }
 p {
   color:  white;
-  font-family: "Lucida Console", "Courier New", monospace;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .p2 {
-   font-family: "Lucida Console", "Courier New", monospace;
+   font-family: Arial, Helvetica, sans-serif;
 }
 .p3 {
-  font-family: "Lucida Console", "Courier New", monospace;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .ul {
   color: white;
-  font-family: "Lucida Console", "Courier New", monospace;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .container {
   display: flex;
@@ -39,4 +39,9 @@ p {
   margin-right: auto;
   max-width: 20%;
   height: auto;
+}
+
+.main-page-content {
+    overflow-wrap: break-word;
+    padding: 3rem 1rem 1rem;
 }
