--- a/hw1/styling.css
+++ b/hw1/styling.css
@@ -45,3 +45,11 @@ p {
     overflow-wrap: break-word;
     padding: 3rem 1rem 1rem;
 }
+
+.centered {
+  position: fixed; /* or absolute */
+  top: 50%;
+  left: 50%;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
+}
