--- a/hw1/styling.css
+++ b/hw1/styling.css
@@ -31,7 +31,7 @@ p {
 .container {
   display: flex;
   flex-direction: column;
-  align-items: center; /* Centers content horizontally */
+  align-items: center;
 }
 .center {
   display: block;
@@ -47,9 +47,18 @@ p {
 }
 
 .centered {
-  position: fixed; /* or absolute */
+  position: fixed;
   top: 50%;
   left: 50%;
-  /* bring your own prefixes */
   transform: translate(-50%, -50%);
 }
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+} 
