--- a/hw1/styling.css
+++ b/hw1/styling.css
@@ -28,13 +28,12 @@ p {
   color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
-/*.container {
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 60%;
   justify-content: center;
-}*/
+}
 /*.center {
   display: block;
   margin: auto;
