--- a/hw1/styling.css
+++ b/hw1/styling.css
@@ -34,13 +34,13 @@ p {
   align-items: center;
   justify-content: center;
 }
-/*.center {
+.center {
   display: block;
   margin: auto;
-  width: 50%;
-  height: auto;
+  /*width: 50%;
+  height: auto;*/
   padding: 10px;
-}*/
+}
 
 .main-page-content {
     overflow-wrap: break-word;
