--- a/hw1/styling.css
+++ b/hw1/styling.css
@@ -1,14 +1,31 @@
+h2 {
+text-align: center;
+    color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Styling */
+
+body {
+  margin: auto;
+  width: 640px; 
+  padding: 50px;
+  font-family: 'Lexend Deca', sans-serif; 
+  color: #2E475D;    
+}
+
+
 img {
   max-width: 100%;
   height: auto;
 }
-body {
+/*body {
   background-color: black;
-}
-h2 {
+}*/
+/*h2 {
   color: white;
   font-family: "Lucida Console", "Courier New", monospace;
-}
+}*/
 h3 {
   color:  white;
   font-family: "Lucida Console", "Courier New", monospace;
