--- a/hw1/styling.css
+++ b/hw1/styling.css
@@ -1,6 +1,6 @@
 h2 {
 text-align: center;
-    color: white;
+    color: #212427;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -8,7 +8,7 @@ text-align: center;
 
 body {
   margin: auto;
-  width: 640px; 
+  width: 50%; 
   padding: 50px;
   font-family: 'Lexend Deca', sans-serif; 
   color: #2E475D;    
@@ -27,11 +27,11 @@ img {
   font-family: "Lucida Console", "Courier New", monospace;
 }*/
 h3 {
-  color:  white;
+  color:  #212427;
   font-family: "Lucida Console", "Courier New", monospace;
 }
 p {
-  color:  white;
+  color:  #212427;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -42,7 +42,7 @@ p {
   font-family: Arial, Helvetica, sans-serif;
 }
 .ul {
-  color: white;
+  color: #212427;
   font-family: Arial, Helvetica, sans-serif;
 }
 .container {
