--- a/hw1/styling.css
+++ b/hw1/styling.css
@@ -28,7 +28,7 @@ img {
 }*/
 h3 {
   color:  #212427;
-  font-family: "Lucida Console", "Courier New", monospace;
+  font-family: Arial, Helvetica, sans-serif;
 }
 p {
   color:  #212427;
