--- a/hw2/styling.css
+++ b/hw2/styling.css
@@ -1,6 +1,6 @@
 h2 {
 text-align: center;
-    color: #212427;
+    color: #FFFFFF;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -12,7 +12,7 @@ body {
   max-width: 960px;
   padding: 25px;
   font-family: 'Lexend Deca', sans-serif; 
-  color: #2E475D;    
+  color: #FFFFFF;    
 }
 
 
@@ -20,19 +20,19 @@ img {
   max-width: 100%;
   height: auto;
 }
-/*body {
-  background-color: black;
-}*/
+body {
+  background-color: #FFFFFF;
+}
 /*h2 {
   color: white;
   font-family: "Lucida Console", "Courier New", monospace;
 }*/
 h3 {
-  color:  #212427;
+  color:  #FFFFFF;
   font-family: Arial, Helvetica, sans-serif;
 }
 p {
-  color:  #212427;
+  color:  #FFFFFF;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -43,7 +43,7 @@ p {
   font-family: Arial, Helvetica, sans-serif;
 }
 .ul {
-  color: #212427;
+  color: #FFFFFF;
   font-family: Arial, Helvetica, sans-serif;
 }
 .container {
