--- a/hw2/styling.css
+++ b/hw2/styling.css
@@ -12,7 +12,7 @@ body {
   max-width: 960px;
   padding: 25px;
   font-family: 'Lexend Deca', sans-serif; 
-  color: #FFFFFF;    
+  color: #17191A;    
 }
 
 
@@ -20,9 +20,7 @@ img {
   max-width: 100%;
   height: auto;
 }
-body {
-  background-color: #FFFFFF;
-}
+
 /*h2 {
   color: white;
   font-family: "Lucida Console", "Courier New", monospace;
