--- a/hw2/styling.css
+++ b/hw2/styling.css
@@ -12,7 +12,7 @@ body {
   max-width: 960px;
   padding: 25px;
   font-family: 'Lexend Deca', sans-serif; 
-  color: #17191A;    
+  background-color: #17191A;    
 }
 
 
